--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,7 +105,7 @@
             android:background="@drawable/button_shape_default"
             android:layout_marginLeft="18dp"
             android:layout_marginRight="18dp"
-            app:spinning_bar_color="@color/black"
+            app:spinning_bar_color="@color/green"
             app:spinning_bar_width="4dp"
             app:initialCornerAngle="50dp"
             app:finalCornerAngle="50dp"
